# Tucil1_DAI

./: CMakeLists.txt  Dockerfile  README.md  notes.md
.cache/clangd/index/: cube.cpp.52B065797B37BBAE.idx  cube.hpp.21D64CE21AD85027.idx  genetic_algorithm.cpp.974608D05610D517.idx  genetic_algorithm.hpp.C75654B57018B52C.idx  main.cpp.2886CF7219072F0A.idx  open_gl_utils.cpp.15BA31B248AE5383.idx  open_gl_utils.hpp.F7AD2FEF8D9C939C.idx  random_restart.cpp.13563FD3175EA774.idx  random_restart.hpp.EA56EE50CB47F4ED.idx  side_ways.cpp.BF496CEDF742970B.idx  side_ways.hpp.73EDB73FEB82CEB2.idx  simulated_annealing.cpp.B1035CBC8E335844.idx  simulated_annealing.hpp.11ED7AE228031269.idx  steep_ascent.cpp.63AF49F61ED24C09.idx  steep_ascent.hpp.167E212C7BCFF745.idx  stochastic.cpp.92BD421867500AEF.idx  stochastic.hpp.B30F90CB856640C2.idx
include/: cube.hpp  genetic_algorithm.hpp  open_gl_utils.hpp  random_restart.hpp  side_ways.hpp  simulated_annealing.hpp  steep_ascent.hpp  stochastic.hpp
src/: cube.cpp  genetic_algorithm.cpp  main.cpp  new_code.cpp  open_gl_utils.cpp  random_restart.cpp  side_ways.cpp  simulated_annealing.cpp  steep_ascent.cpp  stochastic.cpp
